removed user parts related to my friends and made the user controller work
